--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^0.5.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
     "next": "13.4.12",
