Changed a tag to using Link component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chamunda-auto-consultant",
+  "name": "chamunda-auto-consult",
   "version": "0.1.0",
   "private": true,
   "scripts": {
